Fix footer so it stops blocking links and adjust spacing for links

--- a/src/Components/Footer/footer.module.scss
+++ b/src/Components/Footer/footer.module.scss
@@ -2,15 +2,15 @@
 
 .Footer {
   position: fixed;
-  height: 13vh;
-  width: 100%;
+  height: 13%;
+  width: 70%;
   bottom: 0;
   right: 0;
   .polygon {
     height: 100%;
     width: 100%;
     background-color: $blue;
-    clip-path: polygon(100% 0, 20% 100%, 100% 100%);
+    clip-path: polygon(100% 0, 0% 100%, 100% 100%);
   }
   .icons {
     position: relative;
