--- a/src/Components/Navbar/Link/link.module.scss
+++ b/src/Components/Navbar/Link/link.module.scss
@@ -1,7 +1,7 @@
 @import "../../../Pages/Styles/colors";
 
 .Link {
-  height: 30px;
+  padding: 2px;
   background-color: $orange;
   font-family: "Roboto", sans-serif;
   font-size: 1.25rem;
